--- a/app/views/competitions/show.html.slim
+++ b/app/views/competitions/show.html.slim
@@ -3,7 +3,7 @@ h2 = @competition.title
   p 
     = link_to "Редагувати", edit_competition_path(@competition)
     | &nbsp;
-    = link_to "Видалити", competition_path(@competition), method: :delete, data: { confirm: "Ви впевнені" }
+    = link_to "Видалити", competition_path(@competition), method: :delete, data: { confirm: "Ви впевнені?" }
 fieldset
   legend Термін проведення
   = "з #{@competition.begin_date.strftime("%d-%m-%Y %H:%M")} по #{@competition.end_date.strftime("%d-%m-%Y %H:%M")}"
@@ -13,3 +13,6 @@ fieldset
 fieldset
   legend Положення
   = @competition.bulletin.html_safe
+fieldset
+  legend Види
+  = render 'races/list', {races: @competition.races, competition: @competition}
