--- a/app/views/categories/_list.html.slim
+++ b/app/views/categories/_list.html.slim
@@ -2,4 +2,4 @@ ul
   - categories.each do |category|
     li  = link_to category.title, category_path(category)
 p
-  = link_to "Створити нову групу", new_race_category_path(race) if user_signed_in? && current_user.author_of?(competition)
+  = link_to "Створити нову групу", new_race_category_path(race), class: 'btn btn-success' if user_signed_in? && current_user.author_of?(competition)
