--- a/app/views/categories/edit.html.slim
+++ b/app/views/categories/edit.html.slim
@@ -1,6 +1,7 @@
 = tinymce
 = form_for @category, url: category_path(@category) do |f|
   = render 'form', f: f
-  = f.submit "Змінити"
-p
-  = link_to "Відміна", category_path(@category)
+  div.form-group
+    div class="col-sm-offset-2 col-sm-10"
+      = f.submit "Змінити" 
+      = link_to "Відміна", category_path(@category), class: "btn btn-default"
