--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -7,10 +7,9 @@ h3
   = link_to @category.title, category_path(@category)
 - if user_signed_in? && current_user.author_of?(@competition)
   p 
-    = link_to "Редагувати", edit_category_path(@category)
+    = link_to "Редагувати", edit_category_path(@category), class: 'btn btn-info'
     | &nbsp;
-    = link_to "Видалити", category_path(@category), method: :delete, data: { confirm: "Ви впевнені?" }
+    = link_to "Видалити", category_path(@category), method: :delete, data: { confirm: "Ви впевнені?" }, class: 'btn btn-danger'
 fieldset
   legend Опис
   = @category.description.html_safe
-p = link_to @race.title, race_path(@race)
