--- a/app/views/competitions/edit.html.slim
+++ b/app/views/competitions/edit.html.slim
@@ -1,9 +1,10 @@
 = tinymce
 = form_for @competition, url: competition_path(@competition) do |f|
   = render 'form', f: f
-  = f.submit "Змінити"
-p
-  = link_to "Відміна", competition_path(@competition)
+  div.form-group
+    div class="col-sm-offset-2 col-sm-10"
+      = f.submit "Змінити" 
+      = link_to "Відміна", competition_path(@competition), class: "btn btn-default"
 javascript:
   $('#competition_begin_date').datetimepicker({format:'d.m.Y H:i', lang:'uk' });
   $('#competition_end_date').datetimepicker({format:'d.m.Y H:i', lang:'uk' });
