--- a/app/views/competitions/index.html.slim
+++ b/app/views/competitions/index.html.slim
@@ -2,4 +2,4 @@
   p
     = link_to "#{competition.title} (#{competition.begin_date.strftime("%d-%m-%Y %H:%M")} - #{competition.end_date.strftime("%d-%m-%Y %H:%M")})", competition_path(competition)
 p
-  = link_to "Створити новий захід", new_competition_path if user_signed_in?
+  = link_to "Створити новий захід", new_competition_path, class: 'btn btn-success' if user_signed_in?
