--- a/app/views/races/show.html.slim
+++ b/app/views/races/show.html.slim
@@ -1,12 +1,12 @@
 h2
-  = @competition.title
+  = link_to @competition.title, competition_path(@competition)
 h3
   = link_to @race.title, race_path(@race)
 - if user_signed_in? && current_user.author_of?(@competition)
   p 
-    = link_to "Редагувати", edit_race_path(@race)
+    = link_to "Редагувати", edit_race_path(@race), class: 'btn btn-info'
     | &nbsp;
-    = link_to "Видалити", race_path(@race), method: :delete, data: { confirm: "Ви впевнені?" }
+    = link_to "Видалити", race_path(@race), method: :delete, data: { confirm: "Ви впевнені?" }, class: 'btn btn-danger'
 fieldset
   legend Період проведення
   = "з #{@race.begin_date.strftime("%d-%m-%Y %H:%M")} по #{@race.end_date.strftime("%d-%m-%Y %H:%M")}"
