--- a/app/views/competitors/show.html.slim
+++ b/app/views/competitors/show.html.slim
@@ -10,6 +10,6 @@ h3
 p = "Група: #{@competitor.category.title}"
 p = "Прізвище: #{@competitor.surname}"
 p = "Ім'я: #{@competitor.name}"
-p = "Дата народження: #{@competitor.birthday.strftime("%d-%m-%Y")}"
+p = "Дата народження: #{@competitor.birthday.strftime("%d.%m.%Y")}"
 p = "Тренер: #{@competitor.trainer}"
 p = "Розряд: #{@competitor.qualification}"
