--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,9 @@
 doctype html
 html
   head
+    meta charset="utf-8"
+    meta http-equiv="X-UA-Compatible" content="IE=edge"
+    meta name="viewport" content="width=device-width, initial-scale=1"
     title ФСО Волині
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
@@ -10,17 +13,9 @@ html
     = render 'shared/navigation'
     div.container#main-container
       div.row
-        div.col-xs-9
-          - if user_signed_in?
-            p
-              = "#{current_user.email} "
-              = link_to "Вийти", destroy_user_session_path, method: :delete
-          - else
-            p
-              = link_to "Увійти", new_user_session_path
-              | &nbsp;
-              = link_to "Зареєструватись", new_user_registration_path
-        div.col-xs-9
-          p.notice = notice
-          p.alert = alert
+        div
+          - flash.each do |name, msg|
+            = content_tag :div, msg, class: "alert alert-#{name}"
+      div.row
+        div
           = yield
