--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,5 +1,15 @@
 nav class="navbar navbar-default" role="navigation"
-  div.container
+  div.container-fluid
     div.navbar-header
       a.navbar-brand href="/"
        | ФСО Волині
+    div class="collapse navbar-collapse"  
+      p class="navbar-text navbar-right"
+        - if user_signed_in?
+          = current_user.email
+          | &nbsp;
+          = link_to "Вийти", destroy_user_session_path, method: :delete, class: "navbar-link"
+        - else
+          = link_to "Увійти", new_user_session_path, class: "navbar-link"
+          | &nbsp;
+          = link_to "Зареєструватись", new_user_registration_path, class: "navbar-link"
