--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,13 +1,18 @@
-div.col-sm-4
+div.col-sm-4.col-sm-offset-4
   h2 = t('devise.registrations.new.sign_up_title')
 
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f|
     = devise_error_messages!
 
     div.form-group
+      = f.label :name, class: "col-sm-4 control-label"
+      div.col-sm-8
+        = f.text_field :name, autofocus: true, class: "form-control"
+
+    div.form-group
       = f.label :email, class: "col-sm-4 control-label"
       div.col-sm-8
-        = f.email_field :email, autofocus: true, class: "form-control"
+        = f.email_field :email, class: "form-control"
 
     div.form-group
       = f.label :password, class: "col-sm-4 control-label"
@@ -23,7 +28,7 @@ div.col-sm-4
       div.col-sm-8
         = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
-      div class="col-sm-offset-4 col-sm-8"
+      div.col-sm-offset-4.col-sm-8
         = f.submit t('devise.registrations.new.sign_up'), class: "btn btn-info"
 
   = render "devise/shared/links"
