--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,12 +1,16 @@
-nav class="navbar navbar-default" role="navigation"
+nav.navbar.navbar-default role="navigation"
   div.container-fluid
     div.navbar-header
       a.navbar-brand href="/"
        | ФСО Волині
-    div class="collapse navbar-collapse"  
-      p class="navbar-text navbar-right"
+    div.collapse.navbar-collapse  
+      div.nav.navbar-nav
+        li.active = link_to "Новини", articles_path
+        li = link_to "Заходи", competitions_path
+
+      p.navbar-text.navbar-right
         - if user_signed_in?
-          = current_user.email
+          = link_to  current_user.name, edit_user_registration_path, class: "navbar-link"
           | &nbsp;
           = link_to "Вийти", destroy_user_session_path, method: :delete, class: "navbar-link"
         - else
