--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -1,3 +1,6 @@
+- @page_description = "Новина #{@article.title} федерації спортивного орієнтування Волині"
+- @page_keywords = "федерація спортивне орієнтування Волинь Луцьк змагання новина " + @article.title
+- @page_title = @article.title
 div.blog-post
   h2.blog-post-title = @article.title
   p.blog-post-meta 
