--- a/app/views/races/index.html.slim
+++ b/app/views/races/index.html.slim
@@ -1,1 +1,4 @@
+- @page_description = "Список видів змагань заходу " + @competition.title
+- @page_keywords = "федерація спортивне орієнтування Волинь Луцьк змагання захід види " + @competition.title
+- @page_title = "Список видів змагань заходу | " + @competition.title
 = render 'list', {races: @races, competition: @competition}
