--- a/app/views/distances/show.html.slim
+++ b/app/views/distances/show.html.slim
@@ -1,3 +1,6 @@
+- @page_description = "Дистанція #{@distance.title} виду змагань #{@race.title} заходу #{@competition.title} федерації спортивного орієнтування Волині"
+- @page_keywords = "федерація спортивне орієнтування Волинь Луцьк змагання захід " + @competition.title + " " + @race + " " + @distance.title
+- @page_title = @distance.title + " | " + @race.title + " | " + @competition.title
 h2
   = link_to @competition.title, competition_path(@competition)
   | &nbsp;(
