add meta-tag author

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     = tinymce_assets
-    = display_meta_tags(site: "Федерація спортивного орієнтування Волині", title: @page_title, reverse: true, description: @page_description, keywords: @page_keywords, author: "Vasyl Novosad")
+    = display_meta_tags(site: "Федерація спортивного орієнтування Волині", title: @page_title, reverse: true, description: @page_description, keywords: @page_keywords, author: "https://www.linkedin.com/profile/view?id=AAIAABieNvQBe0DYX84xeZbWkel2bnjNUj3CMME")
   body
     div.container
       = render 'shared/navigation'
