--- a/app/views/results/edit.html.slim
+++ b/app/views/results/edit.html.slim
@@ -1,4 +1,4 @@
-= form_for @result, url: race_results_path(@race) do |f|
+= form_for @result, url: result_path(@result) do |f|
   = render 'form', f: f
   div.form-group
     div class="col-sm-offset-2 col-sm-10"
