--- a/app/views/results/_list.html.slim
+++ b/app/views/results/_list.html.slim
@@ -16,7 +16,7 @@
       - if user_signed_in? && current_user.author_of?(competition)
         th Старт
         th Фініш
-    - race.competitors.where(category: category).joins(:result).sort { |a, b| (a.result.state <=> b.result.state).nonzero? || (a.result.finish_at - a.result.start_at <=> b.result.finish_at - b.result.start_at) }.each_with_index do |competitor, index|
+    - race.competitors.where(category: category).joins(:result).sort { |a, b| (a.result.state <=> b.result.state).nonzero? || (((a.result.finish_at.nil? || a.result.start_at.nil?) ? 0 : (a.result.finish_at - a.result.start_at)) <=> ((b.result.finish_at.nil? || b.result.start_at.nil?) ? 0 : (b.result.finish_at - b.result.start_at))) }.each_with_index do |competitor, index|
       - if competitor.result
         tr
           td 
