--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -1,6 +1,11 @@
 - @page_description = "Результати змагань #{@race.title} заходу #{@competition.description}"
 - @page_keywords = "федерація спортивне орієнтування Волинь Луцьк змагання результати захід " + @competition.title
 - @page_title = "Результати змагань | " + @race.title + " | " + @competition.title
+h2
+  = link_to @competition.title, competition_path(@competition)
+h3
+  = link_to @race.title, race_path(@race)
+h4 Результати
 - if user_signed_in? && current_user.author_of?(@competition)
     p 
       = link_to "Додати учасника", new_race_result_path(@race), class: 'btn btn-success'
