--- a/app/views/results/_list.html.slim
+++ b/app/views/results/_list.html.slim
@@ -4,18 +4,17 @@
     theader = category.title
     tr
       th #
+      th Номер 
+      - if user_signed_in? && current_user.author_of?(competition)
+        th Старт/Фініш
       /*th Група*/
       th Прізвище
       th Ім'я
       th Дата народження
       th Тренер
       th Розряд 
-      th Номер 
       th Час 
       th Місце
-      - if user_signed_in? && current_user.author_of?(competition)
-        th Старт
-        th Фініш
     - race.competitors.where(category: category).joins(:result).sort { |a, b| (a.result.state <=> b.result.state).nonzero? || (((a.result.finish_at.nil? || a.result.start_at.nil?) ? 0 : (a.result.finish_at - a.result.start_at)) <=> ((b.result.finish_at.nil? || b.result.start_at.nil?) ? 0 : (b.result.finish_at - b.result.start_at))) }.each_with_index do |competitor, index|
       - if competitor.result
         tr
@@ -25,19 +24,20 @@
             - else
               = index + 1
           /*td = competitor.category.title*/
+          td = competitor.result.start_number
+          - if user_signed_in? && current_user.author_of?(competition) 
+            td 
+              = link_to "Старт", start_result_path(competitor.result), class: 'btn btn-success' if !competitor.result.start_at && !competitor.result.finish_at && competitor.result.state = "-"
+              = link_to "Фініш", finish_result_path(competitor.result), class: 'btn btn-info' if competitor.result.start_at && !competitor.result.finish_at && competitor.result.state = "-"
           td = competitor.surname
           td = competitor.name
           td = competitor.birthday.strftime("%d.%m.%Y")
           td = competitor.trainer
           td = competitor.qualification
-          td = competitor.result.start_number
           td 
             - if competitor.result.state == "-" 
               = Time.diff(competitor.result.start_at, competitor.result.finish_at, '%h:%m:%s')[:diff] if competitor.result.finish_at && competitor.result.start_at
             - else
               = competitor.result.state
           td = index + 1 if competitor.result.state == "-"
-          - if user_signed_in? && current_user.author_of?(competition) 
-            td = link_to "Старт", start_result_path(competitor.result), class: 'btn btn-success' unless competitor.result.start_at || competitor.result.state != "-"
-            td = link_to "Фініш", finish_result_path(competitor.result), class: 'btn btn-success' unless competitor.result.finish_at || competitor.result.state != "-"
   p &nbsp;
