Add domain verification

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge"
+    meta name='wmail-verification' content='1e686da7ec3b7a7798758e3dcf6b4154'
     meta name="viewport" content="width=device-width, initial-scale=1"
     /*title ФСО Волині*/
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
